--- a/.gitignore
+++ b/.gitignore
@@ -222,9 +222,7 @@ pip-selfcheck.json
 #custom
 main.build/
 main.dist/
-/Package/runs
-/Paper1.pdf
-/Paspalakis.txt
+./Package/runs
 .vscode/
-/Drafts/ryy_gate
-/Papers
+./Drafts/ryy_gate
+./Papers
