--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,9 @@ main.dist/
 /Package/runs
 .vscode/
 /Papers
+/DECLARATION OF DEPOSIT - APPROVAL OF ELECTRONIC PUBLICATION.docx
+/MASTER DISSERTATION DATA.docx
+/MSc_Thesis_Cover and Inner Cover Format.docx
+/Pablo_Conte_MSc_Th.zip
+/Thesis Resume.pdf
+
